--- a/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
+++ b/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
@@ -14,7 +14,7 @@
 		<PackageReference Include="Vostok.Hosting" Version="1.0.0-beta000055" />
 		<PackageReference Include="Vostok.Hosting.Core" Version="1.0.0-beta000029" />
 		<PackageReference Include="Vostok.Instrumentation.AspNetCore" Version="1.0.0-beta000031" />
-		<PackageReference Include="Vostok.Logging.Serilog" Version="1.0.0-beta000014" />
+		<PackageReference Include="Vostok.Logging.Serilog" Version="1.0.1" />
 	</ItemGroup>
 	<ItemGroup>
 		<DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
