--- a/src/Web.Api/Web.Api.csproj
+++ b/src/Web.Api/Web.Api.csproj
@@ -25,7 +25,8 @@
 		<PackageReference Include="Vostok.Hosting" Version="1.0.0-beta000055" />
 		<PackageReference Include="Vostok.Hosting.Core" Version="1.0.0-beta000029" />
 		<PackageReference Include="Vostok.Instrumentation.AspNetCore" Version="1.0.0-beta000031" />
-		<PackageReference Include="Vostok.Logging.Serilog" Version="1.0.0-beta000014" />
+		<PackageReference Include="Vostok.Logging.Abstractions" Version="1.0.4" />
+		<PackageReference Include="Vostok.Logging.Serilog" Version="1.0.1" />
 	</ItemGroup>
 	<ItemGroup>
 		<DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
