--- a/src/Common.Api/Common.Api.csproj
+++ b/src/Common.Api/Common.Api.csproj
@@ -13,6 +13,10 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
 		<PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
+		<PackageReference Include="Vostok.ClusterClient.Topology.CC" Version="0.1.0" />
+		<PackageReference Include="Vostok.ClusterConfig.Client" Version="0.1.7" />
+		<PackageReference Include="Vostok.Hercules.Client" Version="0.1.3" />
+		<PackageReference Include="Vostok.Hercules.Client.Abstractions" Version="0.1.4" />
 		<PackageReference Include="Vostok.Hosting" Version="1.0.0-beta000055" />
 		<PackageReference Include="Vostok.Instrumentation.AspNetCore" Version="1.0.0-beta000031" />
 		<PackageReference Include="Serilog">
@@ -33,6 +37,7 @@
 		<PackageReference Include="Vostok.Logging.Console" Version="1.0.3-pre000087" />
 		<PackageReference Include="Vostok.Logging.Context" Version="1.0.1" />
 		<PackageReference Include="Vostok.Logging.File" Version="1.0.4" />
+		<PackageReference Include="Vostok.Logging.Hercules" Version="0.1.2" />
 		<PackageReference Include="Vostok.Logging.Serilog">
 			<Version>1.0.1</Version>
 		</PackageReference>
